src/objects/Order/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>