src/objects/Order/fields/Account_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_ID__c</fullName>
    <label>Account SAP ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>