src/objects/Order/fields/Admin_Validation__c.field-meta.xml
<CustomField>
    <fullName>Admin_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Validation</label>
    <type>Checkbox</type>
</CustomField>