src/objects/Order/fields/Aging_Days__c.field-meta.xml
<CustomField>
    <fullName>Aging_Days__c</fullName>
    <formula>CASE(MOD(RMA_Received_Date__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( RMA_End_Date__c - RMA_Received_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( RMA_End_Date__c - RMA_Received_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( RMA_End_Date__c- RMA_Received_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( RMA_End_Date__c- RMA_Received_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( RMA_End_Date__c - RMA_Received_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( RMA_End_Date__c - RMA_Received_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( RMA_End_Date__c- RMA_Received_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( RMA_End_Date__c - RMA_Received_Date__c )/7)*5)</formula>
    <label>Aging Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>