src/objects/Order/fields/Batch_Flag__c.field-meta.xml
<CustomField>
    <fullName>Batch_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Flag</label>
    <type>Checkbox</type>
</CustomField>