src/objects/Order/fields/Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date__c</fullName>
    <label>Booked Date</label>
    <type>Date</type>
</CustomField>