src/objects/Order/fields/Contribution_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Margin__c</fullName>
    <formula>Contribution_Profit__c  /  Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>