src/objects/Order/fields/Contribution_Profit__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Profit__c</fullName>
    <label>Contribution Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>