src/objects/Order/fields/Count_of_Completed_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Completed_Lines__c</fullName>
    <label>Count of Completed Lines</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>