src/objects/Order/fields/Count_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Line_Items__c</fullName>
    <label>Count of Line Items</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>