src/objects/Order/fields/Disti_Name__c.field-meta.xml
<CustomField>
    <fullName>Disti_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disti Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>