src/objects/Order/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <label>End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>