src/objects/Order/fields/End_Customer_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_SAP_ID__c</fullName>
    <label>End Customer SAP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>