src/objects/Order/fields/FAFV_Status__c.field-meta.xml
<CustomField>
    <fullName>FAFV_Status__c</fullName>
    <description>If((Count_of_Completed_Lines__c1 =  Count_of_Line_Items__c1 &amp;&amp; Count_of_Line_Items__c1 &gt; 0), &quot;Completed&quot;, &quot;Open&quot;)</description>
    <formula>&quot;Open&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FA/FV Status</label>
    <type>Text</type>
</CustomField>