src/objects/Order/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>Gross_Profit__c  /  Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>