src/objects/Order/fields/Header_Hold_Comment__c.field-meta.xml
<CustomField>
    <fullName>Header_Hold_Comment__c</fullName>
    <label>Hold Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>