src/objects/Order/fields/Header_Hold_Name__c.field-meta.xml
<CustomField>
    <fullName>Header_Hold_Name__c</fullName>
    <label>Hold Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>