src/objects/Order/fields/HROCM_Order__c.field-meta.xml
<CustomField>
    <fullName>HROCM_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HROCM Order</label>
    <type>Checkbox</type>
</CustomField>