src/objects/Order/fields/Integration_Flag__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Flag</label>
    <type>Checkbox</type>
</CustomField>