src/objects/Order/fields/Legacy_RMA_Request__c.field-meta.xml
<CustomField>
    <fullName>Legacy_RMA_Request__c</fullName>
    <label>Legacy RMA Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>