src/objects/Order/fields/Loaner__c.field-meta.xml
<CustomField>
    <fullName>Loaner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner</label>
    <referenceTo>Loaner__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>