src/objects/Order/fields/Loaner_Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Admin_Comments__c</fullName>
    <inlineHelpText>This field will be used by Loaner Admins to add comments against Zero Dollar Sales Orders not generated as a result of a Loaner Request in Salesforce</inlineHelpText>
    <label>Loaner Admin Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>