src/objects/Order/fields/Loaner_Order_Exception__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Order_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaner Order Exception</label>
    <type>Checkbox</type>
</CustomField>