src/objects/Order/fields/MDR_Key__c.field-meta.xml
<CustomField>
    <fullName>MDR_Key__c</fullName>
    <label>MDR Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>