src/objects/Order/fields/Oracle_Status__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Status__c</fullName>
    <label>Oracle Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>