src/objects/Order/fields/Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount__c</fullName>
    <description>This field is created as standard Order Amount field is readonly.</description>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>