src/objects/Order/fields/Order_Changed__c.field-meta.xml
<CustomField>
    <fullName>Order_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Changed</label>
    <type>Checkbox</type>
</CustomField>