src/objects/Order/fields/Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Order_Key__c</fullName>
    <externalId>true</externalId>
    <label>Order Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>