src/objects/Order/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>