src/objects/Order/fields/PoDate__c.field-meta.xml
<CustomField>
    <fullName>PoDate__c</fullName>
    <label>SO Last Updated Date</label>
    <type>Date</type>
</CustomField>