src/objects/Order/fields/Primary_Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary (Shipping) Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>