src/objects/Order/fields/proALPHA_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>proALPHA_Order_Number__c</fullName>
    <label>proALPHA Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>