src/objects/Order/fields/Reviewed_by_Loaner_Admin__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Loaner_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by Loaner Admin</label>
    <type>Checkbox</type>
</CustomField>