src/objects/Order/fields/RMA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Completion_Date__c</fullName>
    <label>RMA Completion Date</label>
    <type>Date</type>
</CustomField>