src/objects/Order/fields/RMA_Completion_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>RMA_Completion_Date_Rollup__c</fullName>
    <label>RMA Completion Date_Rollup</label>
    <type>Date</type>
</CustomField>