src/objects/Order/fields/RMA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_End_Date__c</fullName>
    <formula>If(FAFV_Status__c = &apos;Completed&apos;,  RMA_Completion_Date__c ,  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA End Date</label>
    <type>Date</type>
</CustomField>