src/objects/Order/fields/RMA_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Issue_Date__c</fullName>
    <label>RMA Issue Date</label>
    <type>Date</type>
</CustomField>