src/objects/Order/fields/RMA_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Received_Date__c</fullName>
    <description>Oracle - Update this field</description>
    <label>RMA Received Date</label>
    <type>Date</type>
</CustomField>