src/objects/Order/fields/RMA_Request__c.field-meta.xml
<CustomField>
    <fullName>RMA_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the related RMA Request</inlineHelpText>
    <label>RMA Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>