src/objects/Order/fields/SAP_Dist_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Dist_Channel_ID__c</fullName>
    <label>SAP Dist. Channel ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>