src/objects/Order/fields/SAP_Division_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Division_ID__c</fullName>
    <label>SAP Division ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>