src/objects/Order/fields/SAP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Order ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>