src/objects/Order/fields/SAP_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Type__c</fullName>
    <label>SAP Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Rush</fullName>
            </value>
            <value>
                <fullName>Rush with Assembly</fullName>
            </value>
            <value>
                <fullName>Scheduling Agreement</fullName>
            </value>
            <value>
                <fullName>Free-of-Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>