src/objects/Order/fields/SAP_Sales_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Org_ID__c</fullName>
    <label>SAP Sales Org. ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>