src/objects/Order/fields/SO_Created_By__c.field-meta.xml
<CustomField>
    <fullName>SO_Created_By__c</fullName>
    <label>SO Created By</label>
    <length>240</length>
    <type>Text</type>
</CustomField>