src/objects/Order/fields/SO_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Last_Updated_Date__c</fullName>
    <label>SO Last Updated Date</label>
    <type>Date</type>
</CustomField>