src/objects/Order/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>