src/objects/Order/recordTypes/PoS_Order.recordType-meta.xml
<RecordType>
    <fullName>PoS_Order</fullName>
    <active>true</active>
    <label>PoS Order</label>
</RecordType>