src/objects/Order/recordTypes/RMA_Order.recordType-meta.xml
<RecordType>
    <fullName>RMA_Order</fullName>
    <active>true</active>
    <description>This is the record type for orders that come in of type RMA</description>
    <label>RMA Order</label>
</RecordType>