src/objects/Order/recordTypes/Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>Sales_Order</fullName>
    <active>true</active>
    <description>This is the record type used for sales orders coming in through Oracle</description>
    <label>Sales Order</label>
</RecordType>