src/objects/Order/validationRules/Record_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_cannot_be_modified</fullName>
    <active>true</active>
    <description>The user can&apos;t update the order once the source system id is populated.</description>
    <errorConditionFormula>AND(ISCHANGED(LastModifiedDate), not( $Permission.By_Pass_Validation ),$Profile.Name &lt;&gt; &quot;System Administrator&quot;, !ISBLANK( Source_System_Id__c ))</errorConditionFormula>
    <errorMessage>Can&apos;t update the order once the source system id is populated</errorMessage>
</ValidationRule>