src/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Oracle_Status__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>ORDER.PO_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>contains</operation>
        <value>BER-RETURN-SAMPLE/DEMO,BER-SHIPMENT-SAMPLE/DEMO,F-FIRST-ARTICLE-SAMPLE/DEMO,F-RETURN-QUAL-SAMPLE/DEMO,F-RETURN-SAMPLE/DEMO,F-SHIPMENT-QUAL-SAMPLE/DEMO,F-SHIPMENT-SAMPLE/DEMO</value>
    </filters>
    <label>All Orders</label>
</ListView>