src/objects/Order/listViews/POS_Orders.listView-meta.xml
<ListView>
    <fullName>POS_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Oracle_Status__c</columns>
    <columns>Order_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.PoS_Order</value>
    </filters>
    <label>POS Orders</label>
</ListView>