src/objects/Order/listViews/RMA_Orders.listView-meta.xml
<ListView>
    <fullName>RMA_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Order_Amount__c</columns>
    <columns>Oracle_Status__c</columns>
    <columns>Legacy_Id__c</columns>
    <columns>Legacy_RMA_Request__c</columns>
    <columns>ORDER.PO_NUMBER</columns>
    <columns>SO_Created_By__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.RMA_Order</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>contains</operation>
        <value>F-INTERNAL,I-INTERNAL</value>
    </filters>
    <label>RMA Orders</label>
</ListView>